recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:6: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4)
    ^HexaKoch:8: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4);
    ^HexaKoch:10: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4);
    ^HexaKoch:12: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4);
    ^HexaKoch:14: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4);
    ^HexaKoch:16: error: not found: value pentaKoch
    pentaKoch(levels-1,length*0.4)
    ^